--- a/src/static/yolo_categories.html
+++ b/src/static/yolo_categories.html
@@ -281,10 +281,10 @@
 <body>
     <header>
         <div class="header-content">
-            <a href="/static/index.html" class="logo">
+            <a href="/" class="logo">
                 <span class="logo-title">🎯 YOLO Categories</span>
             </a>
-            <button class="btn" onclick="window.location.href='/static/index.html'">← Back to Dashboard</button>
+            <button class="btn" onclick="window.location.href='/'">← Back to Dashboard</button>
         </div>
     </header>
 
