Fix Bugs 3 & 7: Status widget persistence and Process Now/Download All integration
Bug 3 Fix - Widget persistence across page navigation:
- Changed sessionStorage to localStorage for cross-page task persistence
- Widget state now survives navigation to Review, Profiles, Face Training pages

Bug 7 Fix - Process Now and Download All widget integration:
- Added task_tracker integration to /api/process endpoint
- Added task_tracker integration to /api/download-all endpoint
- Both endpoints now return task_id in response
- Frontend buttons now call startTaskTracking() with task_id
- Widget displays real-time progress for these operations

--- a/src/static/status_widget.html
+++ b/src/static/status_widget.html
@@ -209,10 +209,10 @@
 window.activeTasks = new Map();
 window.pollIntervals = new Map();
 
-// Load tasks from sessionStorage on page load
+// Load tasks from localStorage on page load (persists across page navigation)
 function loadTasksFromStorage() {
     try {
-        const stored = sessionStorage.getItem('activeTasks');
+        const stored = localStorage.getItem('activeTasks');
         if (stored) {
             const tasks = JSON.parse(stored);
             tasks.forEach(task => {
@@ -236,7 +236,7 @@ function loadTasksFromStorage() {
     }
 }
 
-// Save tasks to sessionStorage
+// Save tasks to localStorage (persists across page navigation)
 function saveTasksToStorage() {
     try {
         const tasks = Array.from(window.activeTasks.entries()).map(([id, task]) => ({
@@ -248,7 +248,7 @@ function saveTasksToStorage() {
             details: task.details,
             error: task.error
         }));
-        sessionStorage.setItem('activeTasks', JSON.stringify(tasks));
+        localStorage.setItem('activeTasks', JSON.stringify(tasks));
     } catch (error) {
         console.error('Failed to save tasks to storage:', error);
     }
@@ -301,7 +301,7 @@ function startTaskTracking(taskId, taskName = "Processing") {
         details: ''
     });
     
-    // Save to sessionStorage for cross-page persistence
+    // Save to localStorage for cross-page persistence
     saveTasksToStorage();
     
     // Update UI
