Fix widget, scheduler, and clarify button functionality
Issue 1: Widget showing 100% for too long (7 seconds)
- Reduced completion display from 5s to 2s
- Reduced auto-close delay from 2s to 1s
- Total dismiss time now 3s instead of 7s

Issue 2: Scheduled run not downloading videos
- Added detailed logging for download attempts
- Log download parameters (hours, limit)
- Added success/failure logging with helpful diagnostics
- Added try-catch around download_recent_videos() call
- Log suggests checking: recorded videos, account access, duplicates

Issue 3: Clarify Download All vs Process Now buttons
- Added title tooltips to both buttons explaining functionality
- Download All: 'Download videos from Ring cameras only (does not process)'
- Process Now: 'Download (if needed) and process all videos with YOLO/CLIP/face'

This should help diagnose why scheduler isn't downloading and make
button behavior clear to users.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1052,9 +1052,9 @@
                         <option value="30days">Last 30 Days</option>
                         <option value="all">All Available</option>
                     </select>
-                    <button class="btn btn-warning" onclick="downloadAllVideos()">⬇ Download All</button>
+                    <button class="btn btn-warning" onclick="downloadAllVideos()" title="Download videos from Ring cameras only (does not process them)">⬇ Download All</button>
                 </div>
-                <button class="btn btn-success" onclick="triggerProcessing()" id="processNowBtn">▶ Process Now</button>
+                <button class="btn btn-success" onclick="triggerProcessing()" id="processNowBtn" title="Download (if needed) and process all videos with YOLO detection, CLIP refinement, and face recognition">▶ Process Now</button>
                 <button class="btn btn-danger" onclick="stopProcessing()" id="stopProcessingBtn" style="display: none;">⏹ Stop</button>
             </div>
         </div>
