--- a/src/static/status_widget.html
+++ b/src/static/status_widget.html
@@ -335,7 +335,7 @@ async function pollTaskProgress(taskId) {
                 clearInterval(window.pollIntervals.get(taskId));
                 window.pollIntervals.delete(taskId);
                 
-                // Remove from active tasks after 5 seconds
+                // Remove from active tasks after 2 seconds (reduced from 5s)
                 setTimeout(() => {
                     window.activeTasks.delete(taskId);
                     saveTasksToStorage(); // Update storage after removal
@@ -344,14 +344,14 @@ async function pollTaskProgress(taskId) {
                     // Hide indicator if no more active tasks
                     if (window.activeTasks.size === 0) {
                         document.getElementById('statusWidgetIndicator').style.display = 'none';
-                        // Auto-close widget if no more tasks
+                        // Auto-close widget if no more tasks (reduced from 2s to 1s)
                         setTimeout(() => {
                             if (window.activeTasks.size === 0) {
                                 document.getElementById('statusWidget').style.display = 'none';
                             }
-                        }, 2000);
+                        }, 1000);
                     }
-                }, 5000);
+                }, 2000);
             }
         }
     } catch (error) {
