Clarify GPU requirement in config UI
Add a note under the force-CPU toggle that GPU use requires container GPU access.

Tests not run.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2210,6 +2210,9 @@
                         <p style="font-size: 0.875rem; color: var(--text-secondary); margin-top: 0.5rem;">
                             Forces CPU usage even if a GPU is available. Useful for troubleshooting or reserving GPU for other tasks.
                         </p>
+                        <p style="font-size: 0.875rem; color: var(--text-secondary); margin-top: 0.5rem;">
+                            Note: GPU is only used if the container has GPU access (see docker-compose GPU section).
+                        </p>
                     </div>
                     
                     <hr style="margin: 2rem 0; border: none; border-top: 1px solid var(--border-color);">
